html css styles hero main text and img

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
         </ul>
     </header>
 
-    <section class="main-content">
-        <h2>This website is awesome</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit
-        <button class="btn">Sign Up</button>
-        <img src="https://images.unsplash.com/photo-1740442829327-4d7a922811fa?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="placeholder image">
-    </section>
+    <div class="main-content">
+        <div class="left-container">
+            <h2 class="main-text">This website is awesome</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum nisi sed gravida tempor. Etiam rhoncus sem turpis, eget fringilla libero luctus vitae. Integer et velit convallis, egestas diam et, consectetur velit. Morbi a bibendum enim, non feugiat eros. Ut.
+            <button class="btn">Sign Up</button>
+        </div>
+        <div class="right-container">
+            <img src="https://images.unsplash.com/photo-1740442829327-4d7a922811fa?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="meteor">
+        </div>
+    </div>
 </body>
 </html>
