content and quote sections, other minor changes

--- a/index.html
+++ b/index.html
@@ -8,24 +8,50 @@
 </head>
 <body>
     <header>
-        <h1 class="main-title">Home</h1>
+        <img class="popologo" src="imgs/popologo.png">
         <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Search</a></li>
+            <li><a href="#">Apollo</a></li>
+            <li><a href="#">Popó</a></li>
+            <li><a href="#">Poppers</a></li>
         </ul>
     </header>
 
     <div class="main-content">
         <div class="left-container">
-            <h2 class="main-text">This website is awesome</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum nisi sed gravida tempor. Etiam rhoncus sem turpis, eget fringilla libero luctus vitae. Integer et velit convallis, egestas diam et, consectetur velit. Morbi a bibendum enim, non feugiat eros. Ut.
-            <button class="btn">Sign Up</button>
+            <h2 class="main-text">Uma homenagem ao melhor cão do mundo</h2>
+            <p class= "main-paragraph">Popó é um cão muito especial, que nos ensina a cada dia o verdadeiro significado do amor e da amizade.</p>
+            <button class="btn">Popó</button>
         </div>
         <div class="right-container">
-            <img src="https://images.unsplash.com/photo-1740442829327-4d7a922811fa?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="meteor">
+            <img class="popohero" src="imgs/popohero.png" alt="Popózão">
         </div>
+    </div>
+
+    <div class="second-content">
+        <h2 class="second-text">Moods do Popó</h2>
+        <div class="second-container">
+            <div>
+                <img class="fotos-popo" src="imgs/popocavar.png" alt="Popó">
+                <p class="sobre-popo">Popó adora cavar buracos no jardim</p>
+            </div>
+            <div>
+                <img class="fotos-popo" src="imgs/popobrinca.png" alt="Popó">
+                <p class="sobre-popo">Popó adora brincar</p>
+            </div>
+            <div>
+                <img class="fotos-popo" src="imgs/popomimir.png" alt="Popó">
+                <p class="sobre-popo">Popó adora dormir</p>
+            </div>
+            <div>
+                <img class="fotos-popo" src="imgs/popopasseio.png" alt="Popó">
+                <p class="sobre-popo">Popó adora passear</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <h2 class="quote-text">"Au Au Au Au Au"</h2>
+        <p class="quote-author">- Popó quando vê Paulo chegando</p>
     </div>
 </body>
 </html>
