--- a/index.html
+++ b/index.html
@@ -51,7 +51,21 @@
 
     <div class="quote">
         <h2 class="quote-text">"Au Au Au Au Au"</h2>
-        <p class="quote-author">- Popó quando vê Paulo chegando</p>
+        <p class="quote-author">- Popó quando vê o Paulo chegando</p>
+    </div>
+
+    <div class="sign-up">
+        <div class="sign-item signs-text">
+            <h3>Inscreva-se para receber novidades sobre o Popó</h3>
+            <p>Inscreva-se agora e mantenha-se atualizado!</p>
+        </div>
+        <div class="sign-item signs-button">
+            <button class="btn-signup">Inscrever-se</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Feito com ❤️ por Caio</p>
     </div>
 </body>
 </html>
